Switched Gaetrons to vertical.

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,8 +1,8 @@
 {
   "current": {
-    "logo": "shopify:\/\/shop_images\/absurd-industries-logo_72350eb7-b19b-4cee-a633-0f06a2d31c55.png",
+    "logo": "shopify:\/\/shop_images\/absurd-industries-logo.png",
     "logo_width": 240,
-    "favicon": "shopify:\/\/shop_images\/absurd-industries-logo_72350eb7-b19b-4cee-a633-0f06a2d31c55.png",
+    "favicon": "shopify:\/\/shop_images\/absurd-industries-logo.png",
     "type_header_font": "mono",
     "heading_scale": 130,
     "type_body_font": "mono",
@@ -56,17 +56,6 @@
     "collection_card_shadow_horizontal_offset": 0,
     "collection_card_shadow_vertical_offset": 4,
     "collection_card_shadow_blur": 5,
-    "blog_card_style": "card",
-    "blog_card_image_padding": 0,
-    "blog_card_text_alignment": "left",
-    "blog_card_color_scheme": "scheme-4",
-    "blog_card_border_thickness": 0,
-    "blog_card_border_opacity": 10,
-    "blog_card_corner_radius": 10,
-    "blog_card_shadow_opacity": 0,
-    "blog_card_shadow_horizontal_offset": 0,
-    "blog_card_shadow_vertical_offset": 4,
-    "blog_card_shadow_blur": 5,
     "text_boxes_border_thickness": 0,
     "text_boxes_border_opacity": 10,
     "text_boxes_radius": 10,
@@ -99,11 +88,11 @@
     "sale_badge_color_scheme": "scheme-e65fddb3-5f90-488d-8baa-430ab5d94637",
     "sold_out_badge_color_scheme": "scheme-4",
     "brand_headline": "",
-    "brand_description": "<p><em>Open source is about collaborating; not competing.<\/em><\/p>",
-    "brand_image": "shopify:\/\/shop_images\/Absurd_Store_713f872d-e168-4b00-a052-261a4da58b49.png",
+    "brand_description": "<p><em>Open source is about collaborating; not competing!<\/em><\/p>",
+    "brand_image": "shopify:\/\/shop_images\/open-source-hardware.png",
     "brand_image_width": 285,
     "social_facebook_link": "",
-    "social_instagram_link": "https:\/\/www.instagram.com\/absurd.science\/",
+    "social_instagram_link": "https:\/\/www.instagram.com\/absurd.science",
     "social_youtube_link": "https:\/\/www.youtube.com\/@absurd.industries",
     "social_tiktok_link": "",
     "social_twitter_link": "https:\/\/twitter.com\/layogtima",
@@ -111,6 +100,7 @@
     "social_pinterest_link": "",
     "social_tumblr_link": "",
     "social_vimeo_link": "",
+    "social_discord_link": "https:\/\/discord.com\/invite\/DUSUtguG2H",
     "predictive_search_enabled": true,
     "predictive_search_show_vendor": true,
     "predictive_search_show_price": false,
@@ -120,6 +110,17 @@
     "show_cart_note": true,
     "cart_drawer_collection": "",
     "cart_color_scheme": "scheme-e65fddb3-5f90-488d-8baa-430ab5d94637",
+    "blog_card_style": "card",
+    "blog_card_image_padding": 0,
+    "blog_card_text_alignment": "left",
+    "blog_card_color_scheme": "scheme-4",
+    "blog_card_border_thickness": 0,
+    "blog_card_border_opacity": 10,
+    "blog_card_corner_radius": 10,
+    "blog_card_shadow_opacity": 0,
+    "blog_card_shadow_horizontal_offset": 0,
+    "blog_card_shadow_vertical_offset": 4,
+    "blog_card_shadow_blur": 5,
     "sections": {
       "main-password-header": {
         "type": "main-password-header",
